 
	
   [*] Changes that are 100% compatible with existing client code.  
  [**] Changes that requiring little or no modification to existing
       client code. 
 [***] Changes requiring important modifications to existing client code.
   
   [D] Changes affect a method or property which was previously marked as 
       deprecated.
   

 April, 2004 

 - Removed support for the deprecated property "log4j.configDebug". [**/D]

 - Added keys() method to the MDC class as requested by Don Isenor.
 
 - Certain operations on Loggers are now made using ReaderWriterLocks which 
   allows simultaneous read operations but only one write operation. This should 
   significantly improve logging throughput in heavily loaded server environments. 

 - LIST OF CHAINSAW IMPROVEMENTS. 

 - Rolling can now be triggered based on time or size as was already the case in 
   log4j 1.2. However, the new architecture allows for much more variation in the 
   timing of the rollover and the actions taken during rollover (i.e on the fly 
   compression, renaming, moving). The new architecture was suggested a long time 
   ago by James P. Cakalic. A similar design can be found in the Avalon Logkit. 

 - LoggingEvent was extended to allow properties. Properties are meant to be set 
   by Layout and Appender classes as they output/process logging events. 
   Properties are per logging event where MDC values are per thread. 
 
 - Another LoggingEvent constructor was added to allow instances to be reconstituted 
   when received from remote sources that do not use LoggingEvent as the transport 
   type (like XML for example).   

 - Fixed bug #23096. NullAppender getInstance method is now declared as a static.  

 - Fixed bug #10706. The %X pattern without a key no longer causes a NullPointer 
   exception, 
 
 February 19th, 2003
 
 - Release of version 1.2.8

 - Fixed bug #11570 whereby XMLAppender would throw a
   NullPointerException if the input message was null. Many thanks to